--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,4 @@
-- @[**dana elshrbiny**](https://github.com/danaelshrbiny10)  `Data scientist`
-[![](https://img.shields.io/badge/Mail_me-contact@danaelshrbiny.com-crimson)](contact@danaelshrbiny.com)
-- @[**sara mabrouk**](https://github.com/Sara-mabrouk)  `Full stack developer`
-[![](https://img.shields.io/badge/Mail_me-saramabrouk99@gmail.com-pink)](saramabrouk99@gmail.com)
+# This file lists all contributors to the repository.
 
+dana elshrbiny <contact@danaelshrbiny.com>
+sara mabrouk <saramabrouk99@gmail.com>
